# stm32-bare-metal-blink

./: .clangd  .gitignore  CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
src/: main.c
